feat: port 26.2 — deferred rendering pipeline, combat fixes, chat overhaul, Kotlin conversion
Рендер:
- ShapesRenderer/PixelsRenderer/FontPipeline: все draw-вызовы через deferred taskQueue
- flush() после clearColorAndDepthTextures в GameRenderer
- fontFlush callback для MSDF шрифтов
- instanceCount=0→1 фикс в FontPipeline
- blur: prepareBlur ДО экранного контента (без рекурсии)
- Vanilla chat подавлен при кастомном (Hud.extractChat)
- T-chat: только задник + текст + инпут, без оверлеев

Combat:
- InventoryUtil.swapToOffhand(): прямой swap через ContainerInput.SWAP(slot, 40) без хотбара
- AutoGapple Safe mode: canAutoEat() проверки (food/bow/shield/blocks + look at target)

Модули:
- Dynamic Island: 173x30 пилюля, аватар+текст (182 строк)
- ChatScreenBackendApi: StateMachine (718 строк)
- ChatScreenRenderer: кастомный HUD-чат
- MusicControl/MusicFiles: javax.sound.sampled + ~/Music scan

Конвертация Java→Kotlin (6/7 файлов):
- ChatScreenRenderer, Easing, DiscordRPCModule, ConfigFile, FontPipeline, ChatScreenBackendApi
- AporiaRenderer3D: забито

Cleanup:
- GameRenderer.close()→AporiaRenderer.close()→все подсистемы
- Process stream consumption + waitFor()
- exitWorldAndClose: taskkill /F /PID
- commons-lang3: только 3.20.0