@@ -1,11 +1,10 @@
 package net.minecraft.world.entity.ai.sensing;
 
-import com.google.common.collect.ImmutableSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import net.minecraft.server.level.ServerLevel;
-import net.minecraft.world.entity.EntityType;
+import net.minecraft.world.entity.EntityTypes;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.ai.memory.MemoryModuleType;
 
@@ -17,31 +16,31 @@ public class GolemSensor extends Sensor<LivingEntity> {
         this(200);
     }
 
-    public GolemSensor(int p_26642_) {
-        super(p_26642_);
+    public GolemSensor(final int scanRate) {
+        super(scanRate);
     }
 
     @Override
-    protected void doTick(ServerLevel p_26645_, LivingEntity p_26646_) {
-        checkForNearbyGolem(p_26646_);
+    protected void doTick(final ServerLevel level, final LivingEntity body) {
+        checkForNearbyGolem(body);
     }
 
     @Override
     public Set<MemoryModuleType<?>> requires() {
-        return ImmutableSet.of(MemoryModuleType.NEAREST_LIVING_ENTITIES);
+        return Set.of(MemoryModuleType.NEAREST_LIVING_ENTITIES, MemoryModuleType.GOLEM_DETECTED_RECENTLY);
     }
 
-    public static void checkForNearbyGolem(LivingEntity p_26648_) {
-        Optional<List<LivingEntity>> optional = p_26648_.getBrain().getMemory(MemoryModuleType.NEAREST_LIVING_ENTITIES);
-        if (!optional.isEmpty()) {
-            boolean flag = optional.get().stream().anyMatch(p_449604_ -> p_449604_.getType().equals(EntityType.IRON_GOLEM));
-            if (flag) {
-                golemDetected(p_26648_);
+    public static void checkForNearbyGolem(final LivingEntity body) {
+        Optional<List<LivingEntity>> livingEntitiesMemory = body.getBrain().getMemory(MemoryModuleType.NEAREST_LIVING_ENTITIES);
+        if (!livingEntitiesMemory.isEmpty()) {
+            boolean golemPresent = livingEntitiesMemory.get().stream().anyMatch(entity -> entity.is(EntityTypes.IRON_GOLEM));
+            if (golemPresent) {
+                golemDetected(body);
             }
         }
     }
 
-    public static void golemDetected(LivingEntity p_26650_) {
-        p_26650_.getBrain().setMemoryWithExpiry(MemoryModuleType.GOLEM_DETECTED_RECENTLY, true, 599L);
+    public static void golemDetected(final LivingEntity body) {
+        body.getBrain().setMemoryWithExpiry(MemoryModuleType.GOLEM_DETECTED_RECENTLY, true, 599L);
     }
 }
