@@ -1,6 +1,5 @@
 package net.minecraft.world.entity.ai.sensing;
 
-import com.google.common.collect.ImmutableSet;
 import java.util.Optional;
 import java.util.Set;
 import net.minecraft.server.level.ServerLevel;
@@ -9,25 +8,25 @@ import net.minecraft.world.entity.ai.memory.MemoryModuleType;
 import net.minecraft.world.entity.ai.memory.NearestVisibleLivingEntities;
 
 public abstract class NearestVisibleLivingEntitySensor extends Sensor<LivingEntity> {
-    protected abstract boolean isMatchingEntity(ServerLevel p_367040_, LivingEntity p_148292_, LivingEntity p_148293_);
+    protected abstract boolean isMatchingEntity(final ServerLevel level, LivingEntity body, LivingEntity mob);
 
-    protected abstract MemoryModuleType<LivingEntity> getMemory();
+    protected abstract MemoryModuleType<LivingEntity> getMemoryToSet();
 
     @Override
     public Set<MemoryModuleType<?>> requires() {
-        return ImmutableSet.of(this.getMemory());
+        return Set.of(this.getMemoryToSet(), MemoryModuleType.NEAREST_VISIBLE_LIVING_ENTITIES);
     }
 
     @Override
-    protected void doTick(ServerLevel p_148288_, LivingEntity p_148289_) {
-        p_148289_.getBrain().setMemory(this.getMemory(), this.getNearestEntity(p_148288_, p_148289_));
+    protected void doTick(final ServerLevel level, final LivingEntity body) {
+        body.getBrain().setMemory(this.getMemoryToSet(), this.getNearestEntity(level, body));
     }
 
-    private Optional<LivingEntity> getNearestEntity(ServerLevel p_364706_, LivingEntity p_148298_) {
-        return this.getVisibleEntities(p_148298_).flatMap(p_359113_ -> p_359113_.findClosest(p_359116_ -> this.isMatchingEntity(p_364706_, p_148298_, p_359116_)));
+    private Optional<LivingEntity> getNearestEntity(final ServerLevel level, final LivingEntity body) {
+        return this.getVisibleEntities(body).flatMap(livingEntities -> livingEntities.findClosest(mob -> this.isMatchingEntity(level, body, mob)));
     }
 
-    protected Optional<NearestVisibleLivingEntities> getVisibleEntities(LivingEntity p_148291_) {
-        return p_148291_.getBrain().getMemory(MemoryModuleType.NEAREST_VISIBLE_LIVING_ENTITIES);
+    protected Optional<NearestVisibleLivingEntities> getVisibleEntities(final LivingEntity body) {
+        return body.getBrain().getMemory(MemoryModuleType.NEAREST_VISIBLE_LIVING_ENTITIES);
     }
 }
