@@ -1,11 +1,8 @@
 package net.minecraft.world.level.storage.loot.functions;
 
-import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.Sets;
 import com.mojang.serialization.Codec;
 import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
-import com.mojang.serialization.codecs.RecordCodecBuilder.Instance;
 import java.util.List;
 import java.util.Set;
 import net.minecraft.core.Holder;
@@ -19,6 +16,8 @@ import net.minecraft.world.item.enchantment.Enchantment;
 import net.minecraft.world.item.enchantment.EnchantmentHelper;
 import net.minecraft.world.item.enchantment.Enchantments;
 import net.minecraft.world.level.storage.loot.LootContext;
+import net.minecraft.world.level.storage.loot.Validatable;
+import net.minecraft.world.level.storage.loot.ValidationContext;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParams;
 import net.minecraft.world.level.storage.loot.predicates.LootItemCondition;
 import net.minecraft.world.level.storage.loot.providers.number.NumberProvider;
@@ -26,36 +25,44 @@ import net.minecraft.world.level.storage.loot.providers.number.NumberProviders;
 
 public class EnchantedCountIncreaseFunction extends LootItemConditionalFunction {
     public static final int NO_LIMIT = 0;
-    public static final MapCodec<EnchantedCountIncreaseFunction> CODEC = RecordCodecBuilder.mapCodec(
-        p_343314_ -> commonFields(p_343314_)
+    public static final MapCodec<EnchantedCountIncreaseFunction> MAP_CODEC = RecordCodecBuilder.mapCodec(
+        i -> commonFields(i)
             .and(
-                p_343314_.group(
-                    Enchantment.CODEC.fieldOf("enchantment").forGetter(p_343360_ -> p_343360_.enchantment),
-                    NumberProviders.CODEC.fieldOf("count").forGetter(p_343125_ -> p_343125_.value),
-                    Codec.INT.optionalFieldOf("limit", 0).forGetter(p_342628_ -> p_342628_.limit)
+                i.group(
+                    Enchantment.CODEC.fieldOf("enchantment").forGetter(f -> f.enchantment),
+                    NumberProviders.CODEC.fieldOf("count").forGetter(f -> f.count),
+                    Codec.INT.optionalFieldOf("limit", 0).forGetter(f -> f.limit)
                 )
             )
-            .apply(p_343314_, EnchantedCountIncreaseFunction::new)
+            .apply(i, EnchantedCountIncreaseFunction::new)
     );
     private final Holder<Enchantment> enchantment;
-    private final NumberProvider value;
+    private final NumberProvider count;
     private final int limit;
 
-    EnchantedCountIncreaseFunction(List<LootItemCondition> p_344991_, Holder<Enchantment> p_343841_, NumberProvider p_343472_, int p_342112_) {
-        super(p_344991_);
-        this.enchantment = p_343841_;
-        this.value = p_343472_;
-        this.limit = p_342112_;
+    private EnchantedCountIncreaseFunction(
+        final List<LootItemCondition> predicates, final Holder<Enchantment> enchantment, final NumberProvider count, final int limit
+    ) {
+        super(predicates);
+        this.enchantment = enchantment;
+        this.count = count;
+        this.limit = limit;
     }
 
     @Override
-    public LootItemFunctionType<EnchantedCountIncreaseFunction> getType() {
-        return LootItemFunctions.ENCHANTED_COUNT_INCREASE;
+    public MapCodec<EnchantedCountIncreaseFunction> codec() {
+        return MAP_CODEC;
     }
 
     @Override
     public Set<ContextKey<?>> getReferencedContextParams() {
-        return Sets.union(ImmutableSet.of(LootContextParams.ATTACKING_ENTITY), this.value.getReferencedContextParams());
+        return Set.of(LootContextParams.ATTACKING_ENTITY);
+    }
+
+    @Override
+    public void validate(final ValidationContext context) {
+        super.validate(context);
+        Validatable.validate(context, "count", this.count);
     }
 
     private boolean hasLimit() {
@@ -63,27 +70,27 @@ public class EnchantedCountIncreaseFunction extends LootItemConditionalFunction 
     }
 
     @Override
-    public ItemStack run(ItemStack p_344964_, LootContext p_345394_) {
-        Entity entity = p_345394_.getOptionalParameter(LootContextParams.ATTACKING_ENTITY);
-        if (entity instanceof LivingEntity livingentity) {
-            int i = EnchantmentHelper.getEnchantmentLevel(this.enchantment, livingentity);
-            if (i == 0) {
-                return p_344964_;
+    public ItemStack run(final ItemStack itemStack, final LootContext context) {
+        Entity killer = context.getOptionalParameter(LootContextParams.ATTACKING_ENTITY);
+        if (killer instanceof LivingEntity entity) {
+            int level = EnchantmentHelper.getEnchantmentLevel(this.enchantment, entity);
+            if (level == 0) {
+                return itemStack;
             }
 
-            float f = i * this.value.getFloat(p_345394_);
-            p_344964_.grow(Math.round(f));
+            float addition = level * this.count.getFloat(context);
+            itemStack.grow(Math.round(addition));
             if (this.hasLimit()) {
-                p_344964_.limitSize(this.limit);
+                itemStack.limitSize(this.limit);
             }
         }
 
-        return p_344964_;
+        return itemStack;
     }
 
-    public static EnchantedCountIncreaseFunction.Builder lootingMultiplier(HolderLookup.Provider p_345331_, NumberProvider p_344068_) {
-        HolderLookup.RegistryLookup<Enchantment> registrylookup = p_345331_.lookupOrThrow(Registries.ENCHANTMENT);
-        return new EnchantedCountIncreaseFunction.Builder(registrylookup.getOrThrow(Enchantments.LOOTING), p_344068_);
+    public static EnchantedCountIncreaseFunction.Builder lootingMultiplier(final HolderLookup.Provider registries, final NumberProvider count) {
+        HolderLookup.RegistryLookup<Enchantment> enchantments = registries.lookupOrThrow(Registries.ENCHANTMENT);
+        return new EnchantedCountIncreaseFunction.Builder(enchantments.getOrThrow(Enchantments.LOOTING), count);
     }
 
     public static class Builder extends LootItemConditionalFunction.Builder<EnchantedCountIncreaseFunction.Builder> {
@@ -91,17 +98,17 @@ public class EnchantedCountIncreaseFunction extends LootItemConditionalFunction 
         private final NumberProvider count;
         private int limit = 0;
 
-        public Builder(Holder<Enchantment> p_342194_, NumberProvider p_343409_) {
-            this.enchantment = p_342194_;
-            this.count = p_343409_;
+        public Builder(final Holder<Enchantment> enchantment, final NumberProvider count) {
+            this.enchantment = enchantment;
+            this.count = count;
         }
 
         protected EnchantedCountIncreaseFunction.Builder getThis() {
             return this;
         }
 
-        public EnchantedCountIncreaseFunction.Builder setLimit(int p_343717_) {
-            this.limit = p_343717_;
+        public EnchantedCountIncreaseFunction.Builder setLimit(final int limit) {
+            this.limit = limit;
             return this;
         }
 
